--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,4 +37,4 @@ ADD_EXECUTABLE(lrmf_ceres_exec ${SOURCES})
 TARGET_LINK_LIBRARIES(lrmf_ceres_exec ${LRMF_CERES_LIBRARIES})
 
 # Install command
-INSTALL(TARGETS lrmf_ceres_exec DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+INSTALL(TARGETS lrmf_ceres_exec DESTINATION ${CMAKE_INSTALL_PREFIX})
